# mcp

./: .gitignore  README.md  pyproject.toml
configs/: indices.json  llms.json
configs/prompts/: default.json
src/mcp/: main.py
src/mcp/agents/: __init__.py  base.py
src/mcp/agents/advanced/: learning.py  reflection.py
src/mcp/agents/core/: decision.py  memory.py  strategies.py  tools.py
src/mcp/config/: __init__.py  llm_config.py
src/mcp/database/: memory_db.py
src/mcp/examples/: llamaindex_document_processing.py
src/mcp/indices/: __init__.py  base.py  config.py  coordinator.py  document_index.py  document_store.py  file_watcher.py  routes.py  schemas.py  server.py  service_factory.py  utils.py  vector_index.py
src/mcp/llms/: __init__.py  exceptions.py  middleware.py  monitoring.py  routes.py  schemas.py  server.py
src/mcp/llms/providers/: base.py  deepseek.py  factory.py  google.py  openai.py
src/mcp/memory/: __init__.py  adapters.py  base.py  core.py
src/mcp/prompts/: __init__.py  core.py
src/mcp/tools/: __init__.py
src/mcp/workflows/: __init__.py
