[project]
name = "mcp"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ITCamel", email = "it.camel@gmail.com"},
]
dependencies = ["llama-index>=0.12.23", "llama-index-embeddings-huggingface>=0.5.2", "llama-index-llms-huggingface>=0.4.2", "torch>=2.3.0", "docx2txt>=0.8", "transformers-stream-generator>=0.0.5", "einops>=0.8.1", "optimum>=1.24.0", "gptqmodel>=2.0.0", "setuptools>=76.0.0", "wheel>=0.45.1", "ninja>=1.11.1.3", "torchvision>=0.21.0", "torchaudio>=2.6.0", "llama-index-core>=0.12.23.post2", "chromadb>=0.6.3", "llama-index-vector-stores-chroma>=0.4.1", "llama-index-readers-file>=0.4.6", "fastapi>=0.115.11", "watchdog>=6.0.0", "uvicorn>=0.34.0", "python-multipart>=0.0.20", "prometheus-client>=0.21.1", "openai>=1.66.3", "pydantic-settings>=2.8.1"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
